--- a/App.config
+++ b/App.config
@@ -12,4 +12,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="FootballManagementDBEntities" connectionString="metadata=res://*/SystemModels.csdl|res://*/SystemModels.ssdl|res://*/SystemModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\FootballManagementDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings>
+    <add name="FootballManagementDBEntities" connectionString="metadata=res://*/SystemModels.csdl|res://*/SystemModels.ssdl|res://*/SystemModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\FootballManagementDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+        providerName="System.Data.EntityClient" />
+    <add name="FootballManager.Properties.Settings.cn" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\FootballManagementDB.mdf;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+</connectionStrings></configuration>
